--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,13 @@
       
      <button id="buttonValidarCampos"> </button>
 
-     <div id="containerform">
+     <div class="boxForm" id="containerform">
 
       
 
         <div class="numbercard">
           <input type="text" class="cardnumberone" id="cardnumber" placeholder="Numero de Tarjeta" ondrop="return false;" 
-          onpaste="return false;" onkeypress="return event.charCode>=48 && event.charCode<=57" required/>>
+          onpaste="return false;" onkeypress="return event.charCode>=48 && event.charCode<=57" required/>
            <!-- (onkeypress este evento es ejecutado cuando presionamos cualquier tecla que produce un caracter 
           48 y 57 son el código de carácter Unicode de 0 y 9 -->
           <button type="text" id="confirmar" class="confirmar" >Aceptar</button>
