--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         <H1> ASESORIA JURIDICA </H1>
      </header>
       
-     <button id="buttonValidarCampos"> </button>
+     <button class="botonDiseño" id="buttonValidarCampos"> </button>
 
      <div class="boxForm" id="containerform">
 
