--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
      <div class="boxForm" id="containerform">
 
-      
+      <label id="noNumber"> </label>
 
         <div class="numbercard">
           <input type="text" class="cardnumberone" id="cardnumber" placeholder="Numero de Tarjeta" ondrop="return false;" 
